swift (1.8.0-3) UNRELEASED; urgency=low

  * Ran wrap-and-sort.
  * Installs a default configuration file for swift-dispersion-report
    (Closes: #668775), thanks to Loic Dachary <loic@dachary.org> for reporting.
  * Now using upstream manpages when available.

 -- Thomas Goirand <zigo@debian.org>  Sat, 01 Jun 2013 19:55:10 +0800

swift (1.8.0-2) unstable; urgency=low

  * Upload to unstable.
  * Updates the Allow-all-headers-requested-for-CORS.patch.

 -- Thomas Goirand <zigo@debian.org>  Wed, 15 May 2013 22:32:52 +0800

swift (1.8.0-1) experimental; urgency=low

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 03 Apr 2013 20:30:31 +0800

swift (1.7.5-3) experimental; urgency=low

  * New upstream release.
  * Fixed typoe dependency to python-swiftclient (and not python-swift-client).
  * Removed patches now applied upstream.

 -- Thomas Goirand <zigo@debian.org>  Wed, 03 Apr 2013 20:31:31 +0800

swift (1.7.5-2) experimental; urgency=low

  * Added missing python-swiftclient dependency in swift-account. Thanks to
    Viktor Křivák for reporting (Closes: #703623).
  * Adds adds Add-handler-for-CORS-actual-requests.patch.

 -- Thomas Goirand <zigo@debian.org>  Fri, 22 Mar 2013 01:01:47 +0800

swift (1.7.5-1) experimental; urgency=low

  [ Mehdi Abaakouk ]
  * New upstream release
  * Fixed -x switch issue in swift-bench

  [ Thomas Goirand ]
  * Fixed wrong format URL in debian/copyright.
  * Added missing AUTHORS file in all packages.
  * Removed useless X-Python-Version: >= 2.6 in control, since we already
  Build-Depends: on python-all (>=2.6.6-3~).
  * Removed \r from debian/copyright.
  * Added missing Provides: ${python:Provides}, uses same short desc as in
  Ubuntu, Break with versions << 1.6 (because of the python-swiftclient
  package).
  * Imported Ubuntu patch to stop accessing network when building docs.
  * Fixes a log_daemon_msg typo present in most swift init scripts.