@@ -1,15 +1,0 @@
-[DEFAULT]
-bind_ip = 0.0.0.0
-workers = 2
-
-[pipeline:main]
-pipeline = account-server
-
-[app:account-server]
-use = egg:swift#account
-
-[account-replicator]
-
-[account-auditor]
-
-[account-reaper]
