@@ -1,18 +1,0 @@
-[DEFAULT]
-bind_ip = 0.0.0.0
-workers = 2
-
-[pipeline:main]
-pipeline = container-server
-
-[app:container-server]
-use = egg:swift#container
-
-[container-replicator]
-
-[container-updater]
-
-[container-auditor]
-
-[container-sync]
-
