@@ -1,19 +1,0 @@
-[DEFAULT]
-bind_ip = 0.0.0.0
-workers = 2
-
-[pipeline:main]
-pipeline = recon object-server
-
-[app:object-server]
-use = egg:swift#object
-
-[filter:recon]
-use = egg:swift#recon
-
-[object-replicator]
-# recon_enable = yes
-
-[object-updater]
-
-[object-auditor]
