@@ -28,11 +28,20 @@ endif
 
 override_dh_install:
 	dh_install --fail-missing --sourcedir=debian/tmp
-	install -D -m 0640 $(CURDIR)/debian/account-server.conf $(CURDIR)/debian/swift-account/etc/swift/account-server.conf
-	install -D -m 0640 $(CURDIR)/debian/container-server.conf $(CURDIR)/debian/swift-container/etc/swift/container-server.conf
-	install -D -m 0640 $(CURDIR)/debian/object-server.conf $(CURDIR)/debian/swift-object/etc/swift/object-server.conf
 	rm -rf debian/python-swift/usr/lib/python*/dist-packages/test
-	install -D -m 0640 $(CURDIR)/etc/dispersion.conf-sample $(CURDIR)/debian/swift/etc/swift/dispersion.conf
+
+	# Install default config files
+	install -D -m 0644 $(CURDIR)/etc/dispersion.conf-sample		$(CURDIR)/debian/swift/etc/swift/dispersion.conf
+	install -D -m 0644 $(CURDIR)/etc/swift-bench.conf-sample	$(CURDIR)/debian/swift/etc/swift/swift-bench.conf
+	install -D -m 0644 $(CURDIR)/etc/swift.conf-sample		$(CURDIR)/debian/swift/etc/swift/swift.conf
+	install -D -m 0644 $(CURDIR)/etc/account-server.conf-sample	$(CURDIR)/debian/swift/etc/swift/account-server.conf
+	install -D -m 0644 $(CURDIR)/etc/container-server.conf-sample	$(CURDIR)/debian/container-server/etc/swift/container-server.conf
+	install -D -m 0644 $(CURDIR)/etc/drive-audit.conf-sample	$(CURDIR)/debian/python-swift/etc/swift/drive-audit.conf
+	install -D -m 0644 $(CURDIR)/etc/memcache.conf-sample		$(CURDIR)/debian/swift-proxy/etc/swift/memcache.conf
+	install -D -m 0644 $(CURDIR)/etc/mime.types-sample		$(CURDIR)/debian/swift-proxy/etc/swift/mime.types
+	install -D -m 0644 $(CURDIR)/etc/proxy-server.conf-sample	$(CURDIR)/debian/swift-proxy/etc/swift/proxy-server.conf
+	install -D -m 0644 $(CURDIR)/etc/object-expirer.conf-sample	$(CURDIR)/debian/swift-object/etc/swift/object-expirer.conf
+	install -D -m 0644 $(CURDIR)/etc/object-server.conf-sample	$(CURDIR)/debian/swift-object/etc/swift/object-server.conf
 
 override_dh_installinit:
 	dh_installinit --no-start
